@@ -1,0 +1,25 @@
+package org.jminor.framework.client.model;
+
+import org.jminor.common.db.User;
+import org.jminor.framework.demos.empdept.beans.DepartmentModel;
+import org.jminor.framework.demos.empdept.client.EmpDeptAppModel;
+import org.jminor.framework.demos.empdept.domain.EmpDept;
+
+import static org.junit.Assert.*;
+import org.junit.Test;
+
+public class EntityApplicationModelTest {
+
+  @Test
+  public void test() {
+    final EntityApplicationModel model = new EmpDeptAppModel(new User("scott", "tiger"));
+    assertEquals(1, model.getMainApplicationModels().size());
+    final EntityModel deptModel = model.getMainApplicationModel(DepartmentModel.class);
+    assertNotNull(deptModel);
+    assertEquals(new User("scott", "tiger"), model.getUser());
+    model.refreshAll();
+    assertTrue(deptModel.getTableModel().getRowCount() > 0);
+    assertTrue(deptModel.getDetailModel(EmpDept.T_EMPLOYEE).getTableModel().getRowCount() > 0);
+    model.getDbProvider().disconnect();
+  }
+}
